Opl 4512 repository list not visible in normal zoom in the pipelines tab under connected assets test

--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -34,6 +34,10 @@ primary analytics font*/
     font-weight: 500;
 }
 
+.connected-assets-modal-body {
+    min-height: 10rem;
+}
+
 .metric-sub-header-text-spacing {
     letter-spacing: 2px;
 }
