OPL-1423 Fixing terminology on the pipelien settings screen so that it makes it clear the repo is ONLY for webhook, indicating that individual steps use their own branch settings and just UI spacing cleanup.  NO FUNCTIONAL CHANGES

--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -365,4 +365,16 @@ input[disabled] {
     border-radius: 5px;
 }
 
+.custom-select-input {
+    padding-bottom: 10px;
+}
+
+.object-properties-input {
+    padding-bottom: 10px;
+}
+
+.input-container {
+    padding-bottom: 10px;
+}
+
 /* End Error State CSS */
