--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -57,7 +57,7 @@ primary analytics font*/
 .chart-header-name-text {
     font-family: 'Inter', sans-serif;
     font-weight: 100;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     /*color: #8798ad;*/
     color: white;
 }
