--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -1609,6 +1609,9 @@ div.data-blocks-ellipses {
     .inline-select-filter {
         min-width: 250px;
     }
+    .overlay-panel-body {
+        overflow-x: hidden;        
+    }
 }
 
 @media (min-width: 1500px) {
