OPL-5009-changing date range to be sent corrwctly, adding pipeline name column...

--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -36,6 +36,7 @@ primary analytics font*/
 
 .connected-assets-modal-body {
     min-height: 10rem;
+    overflow: scroll;
 }
 
 .metric-sub-header-text-spacing {
