--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -34,6 +34,11 @@ primary analytics font*/
     font-weight: 500;
 }
 
+.connected-assets-modal-body {
+    min-height: 10rem;
+    overflow: scroll;
+}
+
 .metric-sub-header-text-spacing {
     letter-spacing: 2px;
 }
