--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -950,12 +950,12 @@ a.nav-link {
 
 .content-container {
     border: 1px solid #E6E5E3;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+    border-radius: 1em 1em 6px 6px;
 }
 
 .content-container-border {
     border: 1px solid #E6E5E3;
+    border-radius: 1em 1em 6px 6px;
 }
 
 .content-container-shadow {
@@ -985,6 +985,8 @@ a.nav-link {
     background-color: #3D3B36;
     color: #fef7fd;
     line-height: 2.4em;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .dashboard-container-header {
@@ -1422,6 +1424,7 @@ div.data-blocks-ellipses {
 .container-border {
     border: 1px solid #DFDFDF;
     border-collapse: collapse;
+    border-radius: 1em;
 }
 
 .filter-container-no-border {
@@ -1431,6 +1434,7 @@ div.data-blocks-ellipses {
 .filter-container .content-block-header {
     background-color: #E6E5E3;
     color: #3D3B36;
+    border-radius: 1em 1em 0 0;
 }
 
 .filter-container .title-text-header {
@@ -1738,6 +1742,8 @@ div.data-blocks-ellipses {
     min-height: 500px;
     height: calc(100% - 48px);
     max-height: calc(100% - 48px);
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
 }
 
 /* Confirmation panel */
