--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -985,8 +985,6 @@ a.nav-link {
     background-color: #3D3B36;
     color: #fef7fd;
     line-height: 2.4em;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
 }
 
 .dashboard-container-header {
@@ -1014,8 +1012,6 @@ a.nav-link {
     background-color: #3D3B36;
     padding-top: 1em;
     height: 1.5em;
-    border-bottom-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
 }
 
 .content-block-footer-text-container {
@@ -1426,7 +1422,7 @@ div.data-blocks-ellipses {
 .container-border {
     border: 1px solid #DFDFDF;
     border-collapse: collapse;
-    border-radius: 1rem;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
 }
 
 .filter-container-no-border {
@@ -1436,7 +1432,6 @@ div.data-blocks-ellipses {
 .filter-container .content-block-header {
     background-color: #E6E5E3;
     color: #3D3B36;
-    border-radius: 1rem 1rem 0 0;
 }
 
 .filter-container .title-text-header {
@@ -1744,8 +1739,6 @@ div.data-blocks-ellipses {
     min-height: 500px;
     height: calc(100% - 48px);
     max-height: calc(100% - 48px);
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
 }
 
 /* Confirmation panel */
