--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -950,12 +950,12 @@ a.nav-link {
 
 .content-container {
     border: 1px solid #E6E5E3;
-    border-radius: 1rem;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .content-container-border {
     border: 1px solid #E6E5E3;
-    border-radius: 1rem;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .content-container-shadow {
