--- a/src/css/general/freetrial.css
+++ b/src/css/general/freetrial.css
@@ -19,6 +19,10 @@ Styles specific to Free Trial
     color: #FFF;
 }
 
+.darkGold {
+    color: #CF940C;
+}
+
 
 .loginScreenBackground {
     background-color: #352F54;
