--- a/src/css/general/freetrial.css
+++ b/src/css/general/freetrial.css
@@ -36,8 +36,17 @@ Styles specific to Free Trial
 }
 
 .marketingModulesText {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', sans-serif !important;
     font-weight: 100;
     letter-spacing: 1.3px;
     line-height: 1.5;
+}
+
+/*TODO: Use styled components to handle css*/
+.wizard-selection-option:hover {
+    background-color: #352F54 !important;
+}
+
+.wizard-selection-option:hover .wizard-font {
+    color: #FFF !important;
 }
