Removed extra fonts to ensure Inter is preferred

--- a/src/components/workflow/wizards/sfdc_pipeline_wizard/csv_file_upload/fileupload.css
+++ b/src/components/workflow/wizards/sfdc_pipeline_wizard/csv_file_upload/fileupload.css
@@ -42,7 +42,7 @@
 .drop-message {
   text-align: center;
   color: #352f54;
-  font-family: Arial, sans-serif;
+  /*font-family: Arial, sans-serif;*/
   font-size: 20px;
 }
 
