--- a/src/css/analytics/analytics.css
+++ b/src/css/analytics/analytics.css
@@ -2,8 +2,8 @@
 .data-block-focal-text {
     font-size: 2.43rem;
     font-weight: 500;
-    font-family: "Avenir Next W01", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
+    /*font-family: "Avenir Next W01", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,*/
+    /*"Helvetica Neue", Arial, sans-serif;*/
     letter-spacing: 1px;
     display: inline-block;
 }
