--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -247,7 +247,7 @@ pre {
 }
 
 .tool-title-text {
-    font-family: 'Lato', sans-serif;
+    /*font-family: 'Lato', sans-serif;*/
     font-size: 35px;
     font-weight: 300;
     line-height: 37.5px;
