--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -1438,7 +1438,7 @@ div.data-blocks-ellipses {
 .success-toast {
     background-color: #FFF;
     color: #000000;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;*/
     border: 2px solid green;
     border-left: 8px solid green;
     padding: 2px;
@@ -1449,7 +1449,7 @@ div.data-blocks-ellipses {
 .error-toast {
     background-color: #FFF;
     color: #000000;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;*/
     border: 2px solid #dc3545;
     border-left: 8px solid #dc3545;
     font-size: 15px;
@@ -1460,7 +1460,7 @@ div.data-blocks-ellipses {
 .information-toast {
     background-color: #FFF;
     color: #000000;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;*/
     border: 2px solid #1989F9;
     border-left: 8px solid #1989F9;
     padding: 1px;
@@ -1474,7 +1474,7 @@ div.data-blocks-ellipses {
 
 .warning-toast {
     background-color: #FFF;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;*/
     border: 2px solid #f9c116;
     border-left: 8px solid #f9c116;
     padding: 1px;
