--- a/src/css/general/freetrial.css
+++ b/src/css/general/freetrial.css
@@ -7,6 +7,15 @@ Styles specific to Free Trial
     font-family: 'Inter', sans-serif;
 }
 
+.topNavLinkText {
+    /*font-family: 'Inter', sans-serif;*/
+    font-family: 'Lato', sans-serif;
+    /*font-weight: 300;*/
+    /*letter-spacing: 1.1px;*/
+    color: #FFF;
+    font-size: 16px;
+}
+
 .openRoutesContainer {
     padding-top: 50px;
 }
@@ -40,6 +49,21 @@ Styles specific to Free Trial
     font-weight: 100;
     letter-spacing: 1.3px;
     line-height: 1.5;
+    color: #000;
+}
+
+.marketingModulesTextLink {
+    color: #0d4183;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.focusText {
+    font-family: 'Inter', sans-serif !important;
+    font-weight: 500;
+    line-height: 1.2;
+    color: #7f8d93;
+    font-size: 1.1rem;
 }
 
 /*TODO: Use styled components to handle css*/
