--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -986,9 +986,10 @@ a.nav-link {
 }
 
 .content-block-header-inverse, .filter-container-content-block-header {
-    background-color: #EAE9E7;
-    border-bottom: 1px solid #E6E5E3;
-    color: #3D3B36;
+    background-color: #F4A5069E;
+    /*border-bottom: 1px solid #E6E5E3;*/
+    color: #000;
+    font-family: 'Inter', sans-serif;
 }
 
 .dashboard-container-header {
@@ -1308,6 +1309,8 @@ div.data-blocks-ellipses {
 
 .filter-title-text {
     font-size: 1.1rem;
+    color: #000;
+    font-family: 'Inter', sans-serif;
 }
 
 .filter-body {
