--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -149,8 +149,8 @@ pre {
 
 /* Summary Card Styling */
 .vertical-selection-card {
-    min-width: 200px;
-    width: 240px;
+    /*min-width: 200px;*/
+    /*width: 240px;*/
 }
 
 .vertical-selection-card .title-icon {
