--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -239,24 +239,20 @@ pre {
     font-size: 13px;
     color: #3D3B36;
     font-weight: bold;
+    min-height: 32px;
+    height: 32px;
+    max-height: 32px;
 }
 
 .vertical-selection-card .description-height {
     min-height: 50px;
-    height: 100%;
+    height: 50px;
+    max-height: 50px;
     /*max-height: 90px;*/
 }
 
 .vertical-selection-card .date-and-button {
     min-height: 69px;
-}
-
-.tool-title-text {
-    /*font-family: 'Lato', sans-serif;*/
-    font-size: 35px;
-    font-weight: 300;
-    line-height: 37.5px;
-    white-space: nowrap;
 }
 
 /* End Summary Card Styling */
