--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -384,4 +384,13 @@ input[disabled] {
 .navigation-dropdown-select-input .nav-link {
     padding: 0;
 }
+
+.tooltip-wrapper {
+    display: inline-block;
+}
+
+.tooltip-wrapper .btn[disabled] {
+    /* don't let button block mouse events from reaching wrapper */
+    pointer-events: none;
+}
 /* End Vanity Set V3 Component CSS */
