--- a/src/css/general/freetrial.css
+++ b/src/css/general/freetrial.css
@@ -58,6 +58,15 @@ Styles specific to Free Trial
     text-decoration: underline;
 }
 
+.marketingModulesTextLarger {
+    font-size: 1.2rem;
+}
+
+.marketingModulesValueText {
+    font-size:1.3rem;
+    font-weight: bold;
+}
+
 .focusText {
     font-family: 'Inter', sans-serif !important;
     font-weight: 500;
