--- a/src/css/general/freetrial.css
+++ b/src/css/general/freetrial.css
@@ -8,12 +8,9 @@ Styles specific to Free Trial
 }
 
 .topNavLinkText {
-    /*font-family: 'Inter', sans-serif;*/
-    font-family: 'Lato', sans-serif;
-    /*font-weight: 300;*/
-    /*letter-spacing: 1.1px;*/
-    color: #FFF;
-    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-size: 1rem;
+    letter-spacing: .8px;
 }
 
 .openRoutesContainer {
@@ -82,4 +79,8 @@ Styles specific to Free Trial
 
 .wizard-selection-option:hover .wizard-font {
     color: #FFF !important;
+}
+
+.iconTitleBarSubTitleText {
+    font-size: larger;
 }
