--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -1,6 +1,6 @@
 :root {
     --height: calc(100% + 100px);
-    --font-family-sans-serif: "Inter", "Avenir Next W01", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    --font-family-sans-serif: "Inter", sans-serif;
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
