--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -257,7 +257,7 @@ a:hover, .active, .link-text:hover {
 
 .title-text-header-1 {
     font-size: 1.25rem;
-    letter-spacing: .8px;
+    letter-spacing: .05rem;
 }
 
 .title-text-header-2 {
