--- a/src/css/general/freetrial.css
+++ b/src/css/general/freetrial.css
@@ -39,3 +39,18 @@
 .wizard-selection-option:hover .wizard-font {
     color: #FFF !important;
 }
+
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+
+.video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
