OPL-7548   Implement Rich Text Input component

--- a/src/css/inputs/rich-text-input.css
+++ b/src/css/inputs/rich-text-input.css
@@ -1,35 +1,7 @@
-div.DraftEditor-root {
-    border-top: none;
-    border-left: 1px solid #DDD;
-    border-right: 1px solid #DDD;
-    border-bottom: 1px solid #DDD;
-    min-height: 100px;
+.ce-block__content, .ce-toolbar__content {
+    max-width: calc(100% - 120px) !important;
 }
 
-div.DraftEditor-editorContainer,
-div.public-DraftEditor-content {
-    height: 100%;
-    padding: .25rem;
+.cdx-block {
+    max-width: 100% !important;
 }
-
-.t16lpgj {
-    box-shadow: none;
-    border-top: none;
-    border-left: 1px solid #DDD;
-    border-right: 1px solid #DDD;
-    border-bottom: none;
-    background: #f7f7f7;
-    padding-top: .25rem;
-    padding-bottom: .25rem;
-    /*border-bottom: 1px solid #DDD;*/
-}
-
-.bc4rxid {
-    padding-top: 0;
-    background: #f7f7f7;
-}
-
-/*div.DraftEditor-root {*/
-/*    min-height: 150px;*/
-/*    max-height: 150px;*/
-/*}*/
