--- a/src/css/inputs/rich-text-input.css
+++ b/src/css/inputs/rich-text-input.css
@@ -2,6 +2,11 @@
     max-width: calc(100% - 120px) !important;
 }
 
+.read-only-rich-text .ce-block__content, .ce-toolbar__content {
+    max-width: 100% !important;
+}
+
+
 .cdx-block {
     max-width: 100% !important;
 }
