OPL-7192  Tasks_ECS_Create_Service: Error message shown after selecting AWS tool and region

--- a/src/css/inputs/rich-text-input.css
+++ b/src/css/inputs/rich-text-input.css
@@ -6,7 +6,19 @@
     max-width: 100% !important;
 }
 
+/*.ce-block {*/
+/*    background: #F7F7F7;*/
+/*}*/
+
+/*.ce-block__content {*/
+/*    padding: 5px;*/
+/*    background: #FFFFFF;*/
+/*}*/
 
 .cdx-block {
     max-width: 100% !important;
+}
+
+.ce-toolbar--opened, .ce-settings--opened, .ce-toolbar__content, .ce-settings__plugin-zone {
+    z-index: 5000;
 }
