--- a/src/css/inputs/rich-text-input.css
+++ b/src/css/inputs/rich-text-input.css
@@ -19,6 +19,15 @@
     max-width: 100% !important;
 }
 
-.ce-toolbar--opened, .ce-settings--opened, .ce-toolbar__content, .ce-settings__plugin-zone {
+.ce-toolbar__actions {
+    right: 95%;
+}
+
+.ce-toolbar--opened,
+.ce-settings--opened,
+.ce-toolbar__content,
+.ce-settings__plugin-zone,
+.cdx-settings-button
+{
     z-index: 5000;
 }
