--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -748,6 +748,16 @@ a:hover, .active, .link-text:hover {
     padding: 5px;
 }
 
+.error-text-alt {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    color: #dc3545;
+}
+
+.error-text-alt .form-control:focus {
+    border-color: #dc3545;
+    box-shadow: 0 0.3rem 0 0 rgb(220 53 69 / 25%);
+}
+
 .info-text {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
     color: #3D3B36;
