--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -753,8 +753,8 @@ a:hover, .active, .link-text:hover {
 }
 
 .error-text-alt .form-control:focus {
-    border-color: #dc3545;
-    box-shadow: 0 0.3rem 0 0 rgb(220 53 69 / 25%);
+    border-color: #dc3545 !important;
+    box-shadow: 0 0.3rem 0 0 rgb(220 53 69 / 25%) !important;
 }
 
 .info-text {
