--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -378,7 +378,7 @@ input[disabled] {
 }
 
 .form-control:focus {
-    box-shadow: 0 0.3rem 0 0 rgb(53 47 84 / 25%);
+    box-shadow: 0 0.3rem 0 0 rgba(53, 47, 84, .25);
     border-color: rgb(53 47 84);
 }
 
