--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -376,6 +376,13 @@ input[disabled] {
     padding-bottom: 10px;
 }
 
+.input-container label {
+    margin-bottom: .25rem;
+    /*margin-left: .1rem;*/
+    font-size: 1rem;
+    /*letter-spacing: .1rem;*/
+}
+
 .form-control:focus {
     box-shadow: 0 0.3rem 0 0 rgba(53, 47, 84, .25);
     border-color: rgb(53 47 84);
