--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -1043,3 +1043,49 @@ a:hover, .active, .link-text:hover {
 .bs-tooltip-top {
     z-index: 10000;
 }
+
+.maturity-card-content-bg {
+    background: white;
+}
+
+.maturity-card-elite-color {
+    background: rgba(0, 128, 0, .5);
+    border-color:  rgba(0, 128, 0, .5) !important;
+
+}
+
+.maturity-card-default-color {
+    background: grey;
+    border-color:grey;
+
+}
+
+.maturity-card-high-color {
+    background: rgba(0, 128, 0, .15);
+    border-color:rgba(0, 128, 0, .15) !important;
+
+}
+
+.maturity-card-medium-color {
+    background: rgba(207, 148, 12, .15);
+    border-color: rgba(207, 148, 12, .15) !important;
+}
+
+.maturity-card-low-color {
+    background: rgba(220, 53, 69, .15);
+    border-color: rgba(220, 53, 69, .15) !important;
+}
+
+.maturity-card-block-content-text {
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+}
+
+.maturity-border {
+    border-radius: 0px 6px 6px 6px !important
+}
+
+.maturity-top-border {
+    border-radius: 6px 6px 0px 0px !important
+}
+
