--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -153,6 +153,7 @@ pre {
     width: 240px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
     border-radius: 1rem;
+    overflow: hidden;
 }
 
 .vertical-selection-card-temp {
