--- a/src/css/general/index.css
+++ b/src/css/general/index.css
@@ -1049,21 +1049,18 @@ a:hover, .active, .link-text:hover {
 }
 
 .maturity-card-elite-color {
-    background: rgba(0, 128, 0, .5);
-    border-color:  rgba(0, 128, 0, .5) !important;
-
+    background: rgba(128, 0, 128, .15);
+    border-color: rgba(128, 0, 128, .15) !important;
 }
 
 .maturity-card-default-color {
     background: grey;
-    border-color:grey;
-
+    border-color: grey;
 }
 
 .maturity-card-high-color {
     background: rgba(0, 128, 0, .15);
-    border-color:rgba(0, 128, 0, .15) !important;
-
+    border-color: rgba(0, 128, 0, .15) !important;
 }
 
 .maturity-card-medium-color {
@@ -1077,8 +1074,15 @@ a:hover, .active, .link-text:hover {
 }
 
 .maturity-card-block-content-text {
-    font-size: 1.2rem;
+    font-size: 1rem;
     letter-spacing: 1px;
+    padding-right: 20px !important;
+    padding-top: 5px;
+}
+
+.maturity-info-icon {
+    padding-top: 5px !important;
+    padding-right: 6px !important;
 }
 
 .maturity-border {
