[Styling] Padding consistency

--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -783,10 +783,12 @@ a.nav-link {
 }
 
 .sub-navigation .nav-tabs .nav-link {
+    border-bottom: none;
+
+    /*If we want to use the folder tab-style tabs commented out below, these lines need to be removed*/
+    border-radius: 0;
     border-left: none;
     border-right: none;
-    border-bottom: none;
-    border-radius: 0;
 }
 
 .sub-navigation li {
@@ -802,6 +804,9 @@ a.nav-link {
 .sub-navigation .nav-tabs > li a.active, .sub-navigation .nav-tabs > li a.active:focus {
     color: #CF940C;
     border-top: 5px solid #CF940C;
+    /*border-left: 1px solid #CF940C;*/
+    /*border-right: 1px solid #CF940C;*/
+    /*border-radius: .75rem .75rem 0 0;*/
     text-decoration: none;
 }
 
@@ -818,6 +823,9 @@ a.nav-link {
 
 .sub-navigation .nav-tabs > li a {
     border-top: 5px solid #E6E5E3;
+    /*border-left: 1px solid #E6E5E3;*/
+    /*border-right: 1px solid #E6E5E3;*/
+    /*border-radius: .75rem .75rem 0 0;*/
 }
 
 .sub-navigation li a:hover {
