OPL-7550  [UI] Build compressed left nav option for users

--- a/src/css/general/sidebar.css
+++ b/src/css/general/sidebar.css
@@ -35,7 +35,7 @@
     color: #CF940C; /* #0f3e84;*/
 }
 
-.sidebar-menu a:hover {
+.sidebar-menu a:hover, .sidebar-menu .collapse-icon:hover {
     /*color: #7A756C;*/ /* #0f3e84;*/
     color: #CF940C;
 }
