--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -1755,6 +1755,10 @@ div.data-blocks-ellipses {
     color: #000000;
     padding: 2px 2px 2px 10px;
     min-height: 50px;
+
+    /*TODO: Enable when adjusting UI*/
+    /*padding: 2px 2px 2px 9px;*/
+    /*border-radius: 1rem;*/
 }
 
 .page-link-card-icon {
