--- a/src/css/analytics/analytics.css
+++ b/src/css/analytics/analytics.css
@@ -141,7 +141,9 @@
 }
 
 .maturity-rolled-up-border {
-    border-radius: 0px 6px 6px 6px !important
+    border-radius: 0px 6px 6px 6px !important;
+    border: 5px solid ;
+    background: none;
 }
 
 .maturity-rolled-up-text {
