--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -155,6 +155,14 @@ pre {
     padding: 0;
 }
 
+.rdrMonthAndYearWrapper {
+    padding: 0;
+}
+
+.rdrDefinedRangesWrapper {
+    width: 188px;
+}
+
 /* End Select input styling */
 
 /* Summary Card Styling */
@@ -401,6 +409,11 @@ input[disabled] {
 
 .input-container {
     padding-bottom: 10px;
+}
+
+.input-label label {
+    margin-bottom: 0;
+    font-size: 1rem;
 }
 
 .input-container label {
