--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -546,6 +546,7 @@ a.text-primary:hover, a.text-primary:focus {
 
 .message-field, .pipeline-task-message {
     background-color: #f2f4f8;
+    border-radius: .75rem;
 }
 
 /* Custom modal styling */
