--- a/src/css/general/navbar.css
+++ b/src/css/general/navbar.css
@@ -13,8 +13,8 @@
 }
 
 .nav-bar .header-text {
-  font-size: 1.7rem;
-  margin-left:-3px;
+  /*font-size: 1.7rem;*/
+  /*margin-left:-3px;*/
   color: #fef7fd;
 }
 
@@ -27,7 +27,7 @@
 /* UserName Text Style */
 .navbar-nav .nav-link {
   /* color: #fff !important; */
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
 }
 
 a.nav-drop-down-item:hover {
